<resources>
    <string name="app_name">Wavelength</string>
    <string name="tab_one_name">Explore</string>
    <string name="tab_two_name">Library</string>
    <string name="tab_three_name">Search</string>
    <string name="tab_four_name">Profile</string>
    <string name="search_query_hint">Search by song name</string>
    <string name="title_activity_settings">Preferences</string>
    <string name="title_activity_purchase">Get Wavelength Premium</string>

    <!-- Preference Titles -->
    <string name="album_art_header">Album Art</string>
    <string name="library_header">Library</string>

    <string-array name="library_sorting_default_value">None</string-array>
    <string name="library_sorting_default_value">none</string>

    <!-- Sync Preferences -->
    <string name="album_art_title">Regular album art</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Jasper">Jasper</string>
    <string name="userid">\@jasper666</string>
    <string name="todo">TODO</string>
    <string name="Your_channel">Your channel</string>
    <string name="History">History</string>
    <string name="Your_Recap">Your Recap</string>
    <string name="Switch_account">Switch account</string>
    <string name="Settings">Settings</string>
    <string name="Help_feedback"><![CDATA[Help & feedback]]></string>
    <string name="get_premium">Get Music Premium</string>
    <string name="premium_intro">Enjoy ad-free music, listen in audio mode, play music offline, and download music</string>
    <string name="privacy">Privacy Policy · Terms of Service</string>
    <string name="account">Account</string>
    <string name="manage_acc">Manage your Wavelength Account</string>
</resources>