<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/nav_tab_one">

    <fragment
        android:id="@+id/nav_tab_one"
        android:name="com.example.wavelength.songList.SongListFragment"
        android:label="@string/tab_one_name"
        tools:layout="@layout/fragment_song_list" />

    <fragment
        android:id="@+id/nav_tab_two"
        android:name="com.example.wavelength.playList.PlayListFragment"
        android:label="@string/tab_two_name"
        tools:layout="@layout/fragment_song_list" />

    <fragment
        android:id="@+id/nav_tab_three"
        android:name="com.example.wavelength.search.SearchFragment"
        android:label="@string/tab_three_name"
        tools:layout="@layout/fragment_search" />

</navigation>