<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/img_close"
            app:layout_constraintStart_toEndOf="@+id/img_close"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:text="@string/account"/>

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/img_profile_pic"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/img_close"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/profile_pic"
            />

        <TextView
            android:id="@+id/txt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/akaya_telivigala"
            android:text="@string/Jasper"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/img_profile_pic"
            app:layout_constraintTop_toTopOf="@+id/img_profile_pic" />

        <TextView
            android:id="@+id/txt_userid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/akaya_telivigala"
            android:textSize="20sp"
            android:text="@string/userid"
            app:layout_constraintStart_toEndOf="@+id/img_profile_pic"
            app:layout_constraintTop_toBottomOf="@id/txt_username" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txt_userid"
            app:layout_constraintStart_toStartOf="@+id/txt_userid"
            android:textColor="@color/blue"
            android:text="@string/manage_acc"/>

        <LinearLayout style="@style/common_horizontal_division_line_style"
            app:layout_constraintTop_toBottomOf="@+id/img_profile_pic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:id="@+id/horizontal_line1"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/horizontal_line1"
            app:layout_constraintStart_toStartOf="parent">
            
            <LinearLayout
                android:id="@+id/ll_channel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp">
                
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_person_outline_24"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/Your_channel"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp">
                
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_history_24"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/History"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_recap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_photo_camera_back_24"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/Your_Recap"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_switch_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_switch_account_24"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/Switch_account"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_settings_24"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/Settings"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_help_outline_24"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/Help_feedback"/>
            </LinearLayout>
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/horizontal_line2"
            android:gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:text="@string/privacy"/>

        <LinearLayout style="@style/common_horizontal_division_line_style"
            app:layout_constraintBottom_toTopOf="@+id/txt_premium_intro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/horizontal_line2"/>

        <TextView
            android:id="@+id/txt_premium_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/btn_get_premium"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/premium_intro"/>

        <Button
            android:id="@+id/btn_get_premium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/half_round_corner"
            android:textColor="@color/white"
            android:text="@string/get_premium" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>